# tree-sitter-json

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  go.sum  grammar.js  json.cabal  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-json.h  tree-sitter-json.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_json/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJSONTests/: TreeSitterJSONTests.swift
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt
corpus/: array.txt  false.txt  json.txt  main.txt  null.txt  number.txt  object.txt  string.txt  true
parse/: example_2.json  example_4.json  example_5.json
parse/watabou/: Ivy Stree.json  infected_hold_of_the_one-eyed_one.json
src/: CMakeLists.txt  grammar.json  node-types.json  parser.c
src/tree_sitter/: CMakeLists.txt
test/corpus/: main.txt
