[package]
name = "tree-sitter-json"
description = "Fully tokenized JSON grammar for the tree-sitter parsing library."
version = "0.0.1"
keywords = ["incremental", "parsing", "json"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ArmandBurger/tree-sitter-json"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"

include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.8"

[build-dependencies]
cc = "1.0"
